[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/dialog/talk.png" type="Texture" id=1]
[ext_resource path="res://script/interact_event.gd" type="Script" id=2]
[ext_resource path="res://assets/shaders/JitterFreePixelArt.tres" type="Material" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.82
height = 6.37719

[sub_resource type="Animation" id=2]
resource_name = "TalkEnter"
length = 0.1125
step = 0.0125
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0125, 0.025, 0.0375, 0.05, 0.0625, 0.075, 0.0875, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=3]
resource_name = "TalkExit"
length = 0.125
step = 0.0125
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0125, 0.025, 0.0375, 0.05, 0.0625, 0.075, 0.0875, 0.1, 0.1125 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 8, 7, 6, 5, 4, 3, 2, 1, 0 ]
}

[node name="NPC" type="Node2D"]

[node name="NPC Interact" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC Interact"]
position = Vector2( -0.415031, -6.11846 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="NPC Interact"]
visible = false
material = ExtResource( 3 )
position = Vector2( -2.12132, -29.3449 )
texture = ExtResource( 1 )
hframes = 10
frame = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="NPC Interact"]
anims/TalkEnter = SubResource( 2 )
anims/TalkExit = SubResource( 3 )

[node name="Label" type="Label" parent="NPC Interact"]
visible = false
margin_left = -11.274
margin_top = -37.5953
margin_right = 10.726
margin_bottom = -23.5953
text = "[ ? ]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="NPC Interact"]
[connection signal="body_entered" from="NPC Interact" to="NPC Interact" method="_on_NPC_Interact_body_entered"]
[connection signal="body_exited" from="NPC Interact" to="NPC Interact" method="_on_NPC_Interact_body_exited"]
[connection signal="timeout" from="NPC Interact/Timer" to="NPC Interact" method="_on_Timer_timeout"]
